# ngn

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
doc/: .gitignore  .latexmkrc  00-abstract.tex  00-cert.tex  00-glossary.tex  01-example.md  01-intro.tex  02-objeto.md  03-antecedentes.md  04-descripcion-actual.md  05-normas.md  06-requisitos-iniciales.md  07-hipotesis.md  08-alternativas.md  09-solucion.md  10-riesgos.md  11-organizacion.md  12-conclusiones.md  Makefile  a1-specs.md  a2-design.md  a3-effort.md  a4-security.md  a5-other.md  bibliography.bib  main.tex  slides.md
doc/diagrams/: 01-flux.mmd
doc/images/: 01-flux.mmd  02-java-rust-flux.mmd  components.mmd  seq-connection.mmd  seq-key-exchange.mmd  seq-message.mmd  seq-peer-discovery.mmd  tracert-whatsapp.mmd
doc/res/: pandoc-macros.md  pandoc-minted.py
examples/android/: build.gradle.kts
examples/android/src/androidTest/java/io/crisal/ngndemo/: ExampleInstrumentedTest.kt
examples/android/src/main/: AndroidManifest.xml
examples/android/src/main/java/io/crisal/ngndemo/: GameBoard.kt  GameState.kt  MainActivity.kt
examples/android/src/main/java/io/crisal/ngndemo/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/android/src/main/res/values/: strings.xml  themes.xml
examples/android/src/test/java/io/crisal/myapplication/: ExampleUnitTest.kt
examples/dbus/: main.rs  style.css  ui.rs
examples/dbus/wpa_supplicant/: group.rs  interface.rs  mesh.rs  mod.rs  network.rs  p2pdevice.rs  peer.rs  wpa_supplicant.rs  wps.rs
gradle/: libs.versions.toml
src/: lib.rs  utils.rs
src/phy/: mod.rs
src/phy/android/: NgnSessionProxy.h  build.gradle.kts  mod.rs
src/phy/android/jni/: NgnSessionProxy.java
src/phy/android/src/main/java/: NgnSessionProxy.java
src/phy/android/src/main/java/io/crisal/ngn/: NgnListener.kt  NgnSessionProxy.java
src/phy/dbus/: mod.rs  store.rs
src/phy/dbus/wpa_supplicant/: network.rs  p2pdevice.rs
src/phy/protocol/: mod.rs
src/platform/android/: build.gradle.kts  mod.rs
src/platform/android/src/androidTest/java/io/crisal/ngn/: ExampleInstrumentedTest.kt
src/platform/android/src/main/java/io/crisal/ngn/: NgnListener.kt  NgnSessionProxy.java
src/platform/android/src/test/java/io/crisal/ngn/: ExampleUnitTest.kt
src/platform/dbus/: mod.rs  store.rs
src/platform/dbus/wpa_supplicant/: group.rs  p2pdevice.rs  wps.rs
src/protocol/: encryption.rs  identity.rs  key_exchange.rs  mod.rs  signing.rs
test/: dbus-system-bus-mock.conf  go.conf  setup-android.sh  setup.sh  simple.conf
