[package]
name = "ngn"
version = "0.1.0"
edition = "2021"
description = "P2P"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-lite = "2.6"
env_logger = "0.11"
handy = "0.1"
rand = "0.9"
log = "0.4"
macaddr = "1"
libc = "0.2"

[[example]]
name = "dbus"
crate-type = ["bin"]
