[package]
name = "ngn"
version = "0.1.0"
edition = "2021"
description = "P2P"
authors = ["Emilio Cobos Álvarez <emilio@crisal.io>"]
# Feel free to contact me if you're for some reason interested in re-licensing
# this code.
license = "GPL-3.0-or-later"

[lib]
name = "ngn"
crate-type = ["cdylib", "lib"]

[dependencies]
# Async programming runtime and utilities.
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-lite = "2.6"
# Logging
env_logger = "0.11"
log = "0.4"
# Fast synchronization primitives
parking_lot = "0.12"
# Handle maps
handy = "0.1"
# Random number generation.
rand = "0.9"
# Signing and verification
ring = { version = "0.17", features = ["std"] }
# Binary serialization.
bincode = "2"
bincode_derive = "2"
# Networking and low-level utilities.
macaddr = "1"
libc = "0.2"

# D-Bus support.
[target.'cfg(not(target_os = "android"))'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Android jni support
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
jni-sys = "0.3"
android_logger = "0.15"
log-panics = "2.1" # features = ["with-backtrace"] would be nice but doesn't quite work.

# UI toolkit
[dev-dependencies]
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_4"] }

[[example]]
name = "dbus"
crate-type = ["bin"]
